--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: android
+
+jdk:
+  - oraclejdk8
+
 android:
   components:
     - tools
     - platform-tools
     - build-tools-24.0.2
     - android-24
+
+# as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
+sudo: false
 
 script:
    - ./gradlew test
