--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,18 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-24.0.2
+    - build-tools-25.0.0
     - android-24
 
 # as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
 sudo: false
+
+
+# cache between builds
+cache:
+  directories:
+  - $HOME/.m2
+  - $HOME/.gradle
 
 script:
    - ./gradlew test
