Prepare next development version.

--- a/rxfirebase/build.gradle
+++ b/rxfirebase/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'jacoco-android'
 
 
 // This is the library version used when deploying the artifact
-version = "0.1.0"
+version = "0.2.0-SNAPSHOT"
 
 android {
     compileSdkVersion 25
