--- a/rxfirebase/build.gradle
+++ b/rxfirebase/build.gradle
@@ -18,7 +18,7 @@ class Artifact{
 def artifact = new Artifact();
 
 artifact.with{
-    version = "0.1.4"
+    version = "0.1.3"
     groupId = "com.cantrowitz"
     id = "rxfirebase"
     siteUrl = 'https://github.com/cantrowitz/RxFirebase'
@@ -61,7 +61,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.5.4'
 
-    compile 'io.reactivex.rxjava2:rxjava:2.0.2'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.4'
     compile 'com.google.firebase:firebase-auth:10.0.1'
 }
 
@@ -114,11 +114,17 @@ install {
     repositories.mavenInstaller {
         pom.project {
             packaging 'aar'
-
+            description "Reactive Extensions library for Android and Firebase"
             name  artifact.name // pom.project.name must be same as bintray.pkg.name
             version artifact.version
             url artifact.siteUrl
             inceptionYear '2016' // HARDCODED
+
+            developers {
+                developer {
+                    name "Adam Cantrowitz";
+                }
+            }
 
             licenses {
                 license { // HARDCODED
