--- a/rxfirebase/build.gradle
+++ b/rxfirebase/build.gradle
@@ -18,7 +18,7 @@ class Artifact{
 def artifact = new Artifact();
 
 artifact.with{
-    version = "0.1.4"
+    version = "0.1.5-SNAPSHOT"
     groupId = "com.cantrowitz"
     id = "rxfirebase"
     siteUrl = 'https://github.com/cantrowitz/RxFirebase'
